fix(layout): refine component spacing

--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,6 @@
 =               HEADER               =
 ====================================*/
 .page-header {
-  flex-basis: 13vh;
   box-shadow: 0 4px 8px -1px rgba(0, 0, 0, 0.1);
   padding: 1.5rem 2.5rem;
   display: flex;
@@ -281,14 +280,14 @@
   background: #e0e6ee;
   display: grid;
   grid-template-columns: 1fr max(20rem, 20vw);
-  padding: 3rem 2rem 4rem;
+  padding: 1.5rem 2rem 3rem;
   -moz-column-gap: 2rem;
        column-gap: 2rem;
 }
 
 .section-title {
-  font-size: 1.25rem;
-  font-weight: 600;
+  font-size: 1.2rem;
+  font-weight: bold;
   margin: 0;
 }
 
@@ -303,19 +302,19 @@
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
   height: 100%;
   gap: 2rem;
 }
 
 .project-card {
   background: #ffffff;
-  border-radius: 0.5rem;
-  padding: 2rem 3rem;
-  display: flex;
-  align-items: center;
   position: relative;
+  border-radius: 0.5rem;
+  padding: 1rem 2.5rem;
+  display: flex;
   box-shadow: 0 4px 6px -1px rgba(16, 24, 40, 0.1), 0 2px 4px -2px rgba(16, 24, 40, 0.1);
+  min-height: 14rem;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .project-card:hover {
@@ -336,7 +335,8 @@
 
 .project-card__title {
   font-size: 1.1rem;
-  font-weight: 600;
+  font-weight: bold;
+  padding-top: 0.5rem;
 }
 
 .project-card__title-link {
@@ -390,6 +390,7 @@
 ====================================*/
 .sidebar-widgets {
   display: grid;
+  grid-template: repeat(2, 1fr)/1fr;
   row-gap: 2.5rem;
 }
 
@@ -419,7 +420,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 
 .announcement-item:not(:last-child) .announcement-item__text {
@@ -428,6 +429,7 @@
 
 .announcement-item__title {
   font-size: 0.95rem;
+  font-weight: bold;
   margin: 0;
 }
 
@@ -444,7 +446,7 @@
   font-size: 0.85rem;
   color: #6d6d6d;
   margin: 0;
-  padding-block: 0.5rem 2rem;
+  padding-block: 0.5rem 1.5rem;
 }
 
 /*====================================
