--- a/scss/components/_dashboard-grid.scss
+++ b/scss/components/_dashboard-grid.scss
@@ -5,14 +5,14 @@
 =            VARIABLES               =
 ====================================*/
 
-$font-size-section-headings: 1.25rem;
+$font-size-section-headings: 1.2rem;
 $font-size-body-text: 1rem;
 $font-size-card-title: 1.1rem;
 $font-size-card-text: 0.95rem;
 
 $gap-section-title: 1rem;
-$gap-announcement-items: 2rem;
-$gap-grid: 2rem;
+$gap-announcement-items: $space-md;
+$gap-grid: $space-lg;
 
 $size-card-icon: 1.6rem;
 $size-avatar: 4rem;
@@ -31,13 +31,13 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
   background: $color-background-body;
   display: grid;
   grid-template-columns: 1fr max(20rem, 20vw);
-  padding: 3rem 2rem 4rem;
+  padding: $space-md $space-lg $space-xxl;
   column-gap: $gap-grid;
 }
 
 .section-title {
   font-size: $font-size-section-headings;
-  font-weight: 600;
+  font-weight: bold;
   margin: 0;
 }
 
@@ -53,19 +53,19 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
   height: 100%;
   gap: $gap-grid;
 }
 
 .project-card {
   background: $color-white;
-  border-radius: $border-radius-panel;
-  padding: $space-lg $space-xxl;
-  display: flex;
-  align-items: center;
   position: relative;
+  border-radius: $border-radius-panel;
+  padding: $space-sm $space-xl;
+  display: flex;
   box-shadow: $box-shadow-card;
+  min-height: 14rem;
   @include mixins.hover-lift();
 }
 
@@ -82,7 +82,8 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
 
 .project-card__title {
   font-size: $font-size-card-title;
-  font-weight: 600;
+  font-weight: bold;
+  padding-top: $space-xs;
 }
 
 .project-card__title-link {
@@ -124,6 +125,7 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
 
 .sidebar-widgets {
   display: grid;
+  grid-template: repeat(2, 1fr) / 1fr;
   row-gap: $space-xl;
 }
 
@@ -161,6 +163,7 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
 
 .announcement-item__title {
   font-size: 0.95rem;
+  font-weight: bold;
   margin: 0;
 }
 
