--- a/scss/components/_page-header.scss
+++ b/scss/components/_page-header.scss
@@ -23,7 +23,6 @@ $height-search: $font-size-search * 1.3;
 ====================================*/
 
 .page-header {
-  flex-basis: 13vh;
   box-shadow: $box-shadow-header;
   padding: $space-md $space-xl;
   display: flex;
